# spout

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
examples/: django_ninja_example.py  fastapi_example.py  spout.config.json  usage.py
spout/: __init__.py  cli.py  core.py
spout/detectors/: __init__.py  base.py  detect_service.py  django_ninja.py  fastapi.py
spout/framework_detectors/: __init__.py  base.py  detect_service.py  django_ninja.py  fastapi.py
spout/generators/: __init__.py  axios.py  base.py  fetch.py
spout/models/: __init__.py  cli_input.py  endpoint.py  framework.py  parsers.py
spout/parsers/: __init__.py  base.py  django_ninja.py  fastapi.py
spout/shared/: constants.py  utils.py
tests/: test_core.py
