[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spout"
version = "0.1.0"
description = "Generate TypeScript clients from Python web frameworks with typed responses"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "James Ford", email = "jameslford@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "ast-decompiler>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
fastapi = ["fastapi>=0.68.0"]
django-ninja = ["django-ninja>=0.19.0"]
flask = ["flask>=2.0.0"]

[project.urls]
Homepage = "https://github.com/jameslford/spout"
Repository = "https://github.com/jameslford/spout"
Issues = "https://github.com/jameslford/spout/issues"

[project.scripts]
spout = "spout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spout"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=spout --cov-report=term-missing"
